fixed mobile milestoneInfo font size: was too big for the screen

--- a/styles/Roadmap.module.css
+++ b/styles/Roadmap.module.css
@@ -181,12 +181,13 @@
     .milestoneInfo {
         top: 19vh;
         left: 5vw;
-        font-size: 0.75rem;
         height: 62vh;
         width: 90vw;
     }
 
     .milestoneInfo p{
+        font-size: .8rem;
+        line-height: 1rem;
         text-align: center
     }
 
@@ -242,7 +243,6 @@
     .milestoneInfo {
         left: 0;
         top: -5vh;
-        font-size: 0.75rem;
         height: 110vh;
         width: 100vw;
         position: fixed;
